@@ -13,8 +13,8 @@ function result = strjoin(stringcell, separator)
 if nargin < 1, stringcell = {}; end
 if nargin < 2, separator = ', '; end
 
-assert(iscellstr(stringcell));
-assert(ischar(separator));
+if ~iscellstr(stringcell), error('stringcell need be cellstr'); end
+if ~ischar(separator), error('separator need be char'); end
 
 if isempty(stringcell), result = ''; return; end
 result = [sprintf(['%s' separator], stringcell{1:end-1}), stringcell{end}];
